# ec26-phi-regret-tutorial.github.io

./: .gitignore  Makefile  P1-introduction.typ  P2-phi_regret.typ  P2-semi_separation.typ  P3-ellipsoid.typ  P3-phi-regret-learning.typ  P4-multicalibration.typ  P5-treeswap.typ  P6-profile.typ  README.md  html-export.yaml
.github/workflows/: html-export.yml
docs/: P1-introduction.html  P2-phi_regret.html  P3-ellipsoid.html  P4-multicalibration.html  P5-treeswap.html  P6-profile.html  index.html
figures/: chicken.typ  mcroute.typ  phi-fixed-point.typ  swap-vs-external.typ
figures/eggs/: common.typ
html-exporter/: Cargo.toml  README.md
html-exporter/src/: chapters.rs  gabri-notes.css  main.rs  math.rs  options.rs
meta/: alphanum-intext.csl  alphanum.csl  boxes.typ  citations.typ  equate_html.typ  gabri_notes.typ  gabri_notes_html.typ  gabri_slides.typ  linalg.typ  lovelace.typ  notation.typ  refs.bib  theorems.typ
meta/utils/: pdfpc.typ  utils.typ
public/: P1-introduction.html  P2-phi_regret.html  P2-semi_separation.html  P3-ellipsoid.html  P3-phi-regret-learning.html  P4-multicalibration.html  P5-treeswap.html  P6-profile.html  index.html
